2000-06-07  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (who_chunk): In export mode, attach flag and
	class descriptions to the address.

	* lib/Mj/Format.pm (set): Rewrite; use new return values from the
	core.

	* lib/Majordomo.pm (_set): Change the return values a bit.  Return
	a hash for each address and generate class and flag descriptions.

	* lib/Mj/List.pm (set): Allow comma-separated list of settings.
	Clean up return value a bit.

2000-06-07  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): Chomp out all bounce handling
        stuff; the function was getting way too large.
	(handle_bounce): New function.  Call parsers and generate bounce
	messages.

	* lib/Bf/Parser.pm (parse_dsn): If we didn't get a per-user
        information block, say we couldn't parse the bounce.

2000-06-05  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Format.pm (who): Restructure a bit and allow for 'export'
	mode, which generates commands needed to regenerate a list.

2000-06-01  Michael Yount  <csf@moscow.com>
	* lib/Majordomo.pm:  Add variable substitutions for
	the faq, info, and intro commands.

2000-05-28  Michael Yount  <csf@moscow.com>
	* lib/Mj/CommandProps.pm:  Allow faq, info, and intro
	to be used with the GLOBAL and DEFAULT lists.
    
	* lib/Majordomo.pm:
	(_reg_add, _reg_remove) Sort the list names when storing
	    a subscriber's registry data.
	(_password, _request_response) Do not append a domain name to
	    'whoami' and other addresses when substituting; 
	    Mj::Config does this already.
	(get_all_lists)  Return a sorted list of lists.
	(_password)  Allow $VICTIM to be substituted in new_password.
	(_rekey) Skip registration records for which an Mj::Addr could not
	    be created.
	(_unregister) Allow regular expressions to be used with
	    the unregister command.

2000-05-25  Michael Yount  <csf@moscow.com>
	* bin/mj_wwwusr: New prototype of WWW interface for users.